[package]
name = "hematite"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
fontdue = "0.9.3"
image = "0.25.9"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
x11rb = { version = "0.13.2", features = ["cursor"] }
xdg = "3.0.0"
xkeysym = "0.2.1"
